--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dotenv": "^16.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.2",
+    "express-fileupload": "^1.3.1",
     "express-session": "^1.17.2",
     "method-override": "^3.0.0",
     "mongoose": "^6.2.1",
