Docker the project and do code cleanups

--- a/app/.env
+++ b/app/.env
@@ -2,3 +2,5 @@ NODE_ENV = development
 PORT = 5000
 MONGO_URI_LOCAL = mongodb://localhost/ms-engage
 MONGO_URI_PROD = mongodb+srv://skauddy755:111@cluster0.ptknd.mongodb.net/
+MONGO_URI = mongodb://mongo_service:27017/
+# MONGO_URI = mongodb+srv://skauddy755:111@cluster0.ptknd.mongodb.net/
