--- a/app/.env
+++ b/app/.env
@@ -1,6 +1,6 @@
-NODE_ENV = development
-PORT = 5000
-MONGO_URI_LOCAL = mongodb://localhost/ms-engage
-MONGO_URI_PROD = mongodb+srv://skauddy755:111@cluster0.ptknd.mongodb.net/
+# NODE_ENV = development
+# PORT = 5000
+# MONGO_URI_LOCAL = mongodb://localhost/ms-engage
+# MONGO_URI_PROD = mongodb+srv://skauddy755:111@cluster0.ptknd.mongodb.net/
 # MONGO_URI = mongodb://mongo_service:27017/
-MONGO_URI = mongodb+srv://skauddy755:111@cluster0.ptknd.mongodb.net/
+# MONGO_URI = mongodb+srv://skauddy755:111@cluster0.ptknd.mongodb.net/
