--- a/docker-compose.development.yaml
+++ b/docker-compose.development.yaml
@@ -21,6 +21,14 @@ services:
     volumes:
       - ./app/:/attendance_tracking_system/app
       - ./userdata/:/attendance_tracking_system/userdata
+    environment:
+      - CONTAINERIZED_MONGO_URI=mongodb://mongo_service:27017/
+      - HOSTED_MONGO_URI=mongodb+srv://skauddy755:111@cluster0.ptknd.mongodb.net/
+      - MONGO_SELECT=0 # 0: containerized mongo, 1: hosted mongo
+      - NODE_ENV=development
+      - HOST=localhost
+      - PORT=5000
+      - WEB_ORIGIN=http://localhost:5000
 
 networks:
   ats_network:
